--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -1,16 +1,18 @@
 @import '~open-color/open-color';
 
 #headerWrapper {
-  position: absolute;
+  position: fixed;
   z-index: 20;
   width: 100%;
   background: $oc-indigo-9;
   box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.4);
   overflow: hidden;
-  transition: all linear 0.3s;
+  transition: top linear 0.3s;
 }
 #header {
+  max-width: 1280px;
   width: 100%;
+  margin: auto;
   padding: 0px 8px;
   height: 48px;
   display: flex;
