--- a/src/components/Setting.scss
+++ b/src/components/Setting.scss
@@ -1,3 +1,5 @@
+@import '~open-color/open-color';
+
 #settingWrapper {
   position: fixed;
   display: none;
@@ -40,7 +42,7 @@
   border-radius: 10px !important;
   text-align: left;
   &:hover {
-    background: #76ff76 !important;
+    background: $oc-indigo-3 !important;
     cursor: pointer;
   }
 }
