--- a/src/components/PostList.scss
+++ b/src/components/PostList.scss
@@ -74,7 +74,14 @@
   height: 2.4rem;
   overflow: hidden;
   text-overflow: ellipsis;
+  word-break: break-all;
+
   display: -webkit-box;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
+}
+.thumbnail{
+  float: right;
+  height: 2.4rem;
+  border: 1px solid gray;
 }
