--- a/src/components/PostList.scss
+++ b/src/components/PostList.scss
@@ -76,9 +76,10 @@
   text-overflow: ellipsis;
   word-break: break-all;
 
-  display: -webkit-box;
-  -webkit-line-clamp: 2;
-  -webkit-box-orient: vertical;
+  display: block;
+  /* display: -webkit-box; */
+  /* -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical; */
 }
 .thumbnail{
   float: right;
