--- a/src/components/Content.scss
+++ b/src/components/Content.scss
@@ -14,28 +14,30 @@
   }
 }
 
-.FABs{
+.FABs {
   position: fixed;
   bottom: 0px;
   right: 8px;
   z-index: 1;
-  
+
   display: flex;
   flex-direction: column;
-  transition: all 0.5s ease;
 }
 .FAB {
+  position: relative;
+
   display: flex;
   justify-content: center;
   align-items: center;
   width: 40px;
   height: 40px;
-  margin-Bottom: 10px;
+  margin-bottom: 10px;
   background: $oc-indigo-5;
   opacity: 0.8;
   border-radius: 50% !important;
   box-shadow: 2px 2px 2px 0 grey;
   right: 8px;
+  transition: all 0.5s ease;
   cursor: pointer;
   svg {
     color: white;
@@ -51,11 +53,11 @@
   top: 0;
   left: 0;
   z-index: 5;
-  
+
   width: 100%;
   height: 100%;
   min-height: 100vh;
-  background: rgba(0,0,0,0.5);
+  background: rgba(0, 0, 0, 0.5);
 }
 
 #fakeTextarea {
@@ -69,5 +71,3 @@
   position: absolute;
   top: -10000000px;
 }
-
-
