--- a/src/components/Content.scss
+++ b/src/components/Content.scss
@@ -58,6 +58,25 @@
   height: 100%;
   min-height: 100vh;
   background: rgba(0, 0, 0, 0.5);
+
+  .modal {
+    margin: auto;
+    min-width: 400px;
+    min-height: 300px;
+    padding: 24px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background: white;
+    border: 1px solid black;
+    border-radius: 40px;
+    box-shadow: 1px 1px gray;
+    text-align: center;
+    a {
+      color: blue;
+    }
+  }
 }
 
 #fakeTextarea {
